Fix line break issue due to Trix Editor wrapping elements in div tag

--- a/app/assets/stylesheets/card.css
+++ b/app/assets/stylesheets/card.css
@@ -52,50 +52,17 @@
     margin-right: 2em;
 }
 
-.message {
-    display: block;
-    line-height: 1.4em;
-    font-size: 1.0rem;
-    max-height: 2.8em;
-    overflow: hidden;
-}
-
-.message_avatar {
+/* .message_avatar {
     border: 1px solid green;
-}
+} */
 
-.message_content {
+/* .message_content {
     border: 1px solid red;
-}
+} */
 
 /* .message_content td {
     padding: 1.1rem 0.5rem;
 } */
-
-.message_title {
-    font-weight: bold;
-    font-size: 1.2rem;
-}
-
-.project-card {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    background: #fff;
-    vertical-align: top;
-    margin: 0.35em;
-    padding-top: 33%;
-    font-size: 1.8rem;
-    border-radius: 0.6rem;
-    line-height: 1.3;
-    text-align: left;
-    box-shadow: 0 0 1px rgba(0,0,0,0.25), 0 1px 3px rgba(0,0,0,0.1);
-}
-
-.project-index {
-    margin: 0 auto;
-    max-width: 85%;
-}
 
 /* App card specific CSS */
 
@@ -145,4 +112,76 @@
 
 .card h1 {
     font-size: 1.0em;
+}
+
+.message {
+    display: block;
+    line-height: 1.4em;
+    font-size: 1.0rem;
+    max-height: 2.8em;
+    overflow: hidden;
+}
+
+.message_avatar {
+    vertical-align: middle;
+    border-radius: 50%;
+}
+
+.message-date-and-body div {
+    display: inline-block;
+}
+.messages-table {
+    line-height: 1.4em;
+    font-size: 1.5rem;
+}
+
+.messages-table td {
+    padding: 1.1rem 0.5rem;
+}
+
+.messages-table_avatar {
+    max-width: 9rem;
+    padding-left: 0 !important;
+    text-align: right;
+    white-space: nowrap;
+    vertical-align: top;
+    padding-top: 0.9rem;
+}
+
+.messages-table--for-card .messages-table_avatar {
+    max-width: 4.8rem;
+}
+
+.messages-table--for-card .messages-table_cell {
+    display: table-cell;
+    padding: 0.5rem 0.2rem 0.3rem;
+}
+
+.message_title {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.project-card {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    background: #fff;
+    vertical-align: top;
+    margin: 0.35em;
+    padding-top: 33%;
+    font-size: 1.8rem;
+    border-radius: 0.6rem;
+    line-height: 1.3;
+    text-align: left;
+    box-shadow: 0 0 1px rgba(0,0,0,0.25), 0 1px 3px rgba(0,0,0,0.1);
+}
+
+.project-index {
+    margin: 0 auto;
+    max-width: 85%;
+}
+
+.txt-uncolor {
+    color: #877457;
 }
