--- a/app/assets/stylesheets/session.css
+++ b/app/assets/stylesheets/session.css
@@ -425,10 +425,10 @@ trix-toolbar .button_row {
     }
 }
 
-.message_avatar {
+/* .message_avatar {
     vertical-align: middle;
     border-radius: 50%;
-}
+} */
 
 .messages-project {
     width: 80%;
@@ -453,6 +453,11 @@ trix-toolbar .button_row {
     justify-content: space-between;
 }
 
+/* .messages-table {
+    line-height: 1.4em;
+    font-size: 1.5rem;
+}
+
 .messages-table td {
     padding: 1.1rem 0.5rem;
 }
@@ -473,7 +478,7 @@ trix-toolbar .button_row {
 .messages-table--for-card .messages-table_cell {
     display: table-cell;
     padding: 0.5rem 0.2rem 0.3rem;
-}
+} */
 
 .new-message-buttons {
     margin-top: 2rem;
